vpc.tf
# resource "aws_vpc" "wp" {
#   cidr_block = "10.0.0.0/16"

#   tags = {
#       terraform = "true"
#   }
# }
